# ut-cs6300-project

./: .env.template  .gitmodules  AGENTS.md  DESIGN_BRIEF.md  README.md  frost.py  main.py  pfaf.py  plants.py  pyproject.toml
agents/core/: __init__.py  agent_state.py  base_agent.py  config.py
agents/evals/: __init__.py  evaluator.py
agents/prompts/: garden_prompts.py  prompt_builder.py
agents/react/: __init__.py  garden_state.py  react_agent.py
agents/tools/: __init__.py  garden_tools.py  pfaf_database.py  tool_registry.py
data/: phzm_us_zipcode_2023.csv
examples/: evaluation_dataset.json  garden_agent_example.py
tests/integration/: test_evaluation_integration.py  test_react_agent_integration.py
tests/unit/: test_agent_state.py  test_garden_tools.py  test_prompt_builder.py  test_tool_registry.py
